# stapler-mcp

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/stapler-mcp/: main.go
crates/cli/: Cargo.toml
crates/cli/examples/: relevance_spot_check.rs
crates/cli/src/: main.rs  thin_client.rs
crates/cli/tests/: daemon_ping.rs  docs_index.rs  tool_schema.rs  webcrawl.rs
crates/core/: Cargo.toml
crates/core/src/: client.rs  daemon.rs  lib.rs  paths.rs  ports.rs  protocol.rs  schema.rs
crates/core/src/tools/: docs.rs  fetch.rs  mod.rs  search.rs  webcrawl.rs
crates/native/: Cargo.toml
crates/native/src/: browser.rs  embed.rs  env.rs  fs.rs  http.rs  lib.rs  lock.rs  sleep.rs  socket.rs  spawn.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: browser.rs  clock.rs  env.rs  fs.rs  http.rs  js_util.rs  lib.rs  lock.rs  process.rs  socket.rs
crates/wasm/src/glue/: browser.js  clock.js  env.js  fs.js  http.js  lock.js  process.js  socket.js
internal/daemon/: daemon.go  lock.go
internal/daemonclient/: client.go  integration_test.go
internal/ipc/: paths.go  protocol.go
internal/mcpserver/: server.go
internal/tools/fetch/: fetch.go
internal/tools/search/: search.go  search_test.go
internal/tooltypes/: fetch.go  search.go
npm/: package-lock.json  package.json
npm/test/: e2e.test.js
project_plans/docs-index/: requirements.md
project_plans/docs-index/decisions/: ADR-0001-local-embeddings-fastembed-brute-force-native-only.md  ADR-0002-embedder-port-trait.md
project_plans/docs-index/implementation/: adversarial-review.md  architecture-review.md  plan.md  pre-mortem.md  validation.md
project_plans/docs-index/research/: architecture.md  build-vs-buy.md  features.md  pitfalls.md  stack.md  ux.md
scripts/: docs-mcp-server.service.example  ensure-docs-mcp-server.sh
