[package]
name = "stapler-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stapler-mcp"
path = "src/main.rs"

[dependencies]
stapler-mcp-core = { path = "../core" }
stapler-mcp-native = { path = "../native" }
tokio = { version = "1", features = ["rt", "macros", "time", "net", "io-util", "sync"] }
rmcp = { version = "2", features = ["server", "macros", "transport-io", "schemars"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
