[package]
name = "stapler-mcp-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
schemars = "1.0"
form_urlencoded = "1"
url = "2"
dom_smoothie = "0.18"
dom_query = "0.28"
htmd = "0.5"
texting_robots = "0.2"
sha2 = "0.11"
