[package]
name = "stapler-mcp-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
schemars = "1.0"
form_urlencoded = "1"
url = "2"
dom_smoothie = "0.18"
dom_query = "0.28"
htmd = "0.5"
texting_robots = "0.2"
sha2 = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
text-splitter = { version = "0.32", features = ["markdown"] }
# `rt` only: gives `tokio::task::yield_now()` for `index_source`'s
# sub-batched-embed yielding (Story 4.1.3) without pulling in a reactor/IO
# driver this crate never needs.
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
