[package]
name = "stapler-mcp-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
stapler-mcp-core = { path = "../core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
schemars = "1.0"
